fix: align andanimate text LANG=en_EN date +'(%a, %b %d, %Y %r)'

--- a/cssMemSlider/styles/animation.css
+++ b/cssMemSlider/styles/animation.css
@@ -1,13 +1,4 @@
-@keyframes mem-flip {
-    from {
-        transform: translateX(100%);
-    }
-    to {
-        transform: translateX(0);
-    }
-}
-
-@keyframes mem-note-flip {
+@keyframes flip {
     from {
         transform: translateX(100%);
     }
